# Diplomado-Ciencia-Datos

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.yml
.devcontainer/: devcontainer.json
data/: Team-calor- o-team-frío.csv  test_p3.csv  train_p3.csv
data/Airbnb/: dictionary.csv  dictionary_trabajado.csv
data/Alcaldias_CDMX/: alcaldias_cdmx.dbf
data/FIFA/: FIFA19-DS.csv  FIFA19-MD-Descripción.csv  X_tsne.pkl
data/casas-imagenes/: metadata.txt
data/Índice_de_marginalidad/metadatos/: metadatos_iter_00_cpv2020.txt
notebooks/: 0-Hello-Pandas.ipynb  1-Ecobici-análisis.ipynb  10-Proyecto-Hipertension-Mexico.ipynb  13-Agrupamiento-texto.ipynb  16-Manuscrita.ipynb  2-Starbucks.ipynb  3-Restaurantes.ipynb  3-Starbucks.ipynb  4-Restaurantes.ipynb  5-Regresiones.ipynb  6-Whatsapp.ipynb  7-Clasificación-clientes.ipynb  Clasificación_Pokémons.ipynb  Clasificación_Pokémons_Base.ipynb  Predicción_precios_casas_CNN.ipynb
results/10-Hipertension-Mexico/: X_test.pickle  X_test_raw.pickle  X_train.pickle  X_val.pickle  X_val_raw.pickle  best_features.pickle  best_model.pickle  categorical_features.pickle  numerical_features.pickle  preprocessor.pickle  y_test.pickle  y_train.pickle  y_val.pickle
results/7-Clasificación-clientes/: best_features.pickle  grouper.pickle  model.pickle  preprocessor.pickle
results/9-Electrocardiograma/: X_test.pickle  X_test_e1_transformed.pickle  best_features.pickle  best_model.pickle  numerical_features.pickle  preprocessor.pickle  xgb_metrics_df.pickle  y_test.pickle  y_train.pickle
src/: data_analysis_octopus.py  equipo_7.py
src/app_clustering/: app.py  clustering.py
(+2 files in other folders)
