[tool.poetry]
name = "diplomado"
version = "0.1.0"
description = ""
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
cufflinks = "^0.17.3"
nbformat = "^5.10.4"
jupyterlab = "^4.1.6"
dash = "^2.17.0"
varclushi = "^0.1.0"
unidecode = "^1.3.8"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".", "src"
]
testpaths = [
    "tests"
]
