[tool.poetry]
name = "diplomado"
version = "0.1.0"
description = ""
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pandas = "^2.2.1"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
cufflinks = "^0.17.3"
nbformat = "^5.10.4"
jupyterlab = "^4.1.6"
dash = "^2.17.0"
varclushi = "^0.1.0"
unidecode = "^1.3.8"
black = "^24.4.2"
xgboost = "^2.0.3"
nltk = "^3.8.1"
isort = "^5.13.2"
wfdb = "^4.1.2"
neurokit2 = "^0.2.9"
pyproj = "^3.6.1"
geopandas = "^1.0.1"
shap = "^0.46.0"
phik = "^0.12.4"
sentence-transformers = "^3.0.1"
google-api-python-client = "^2.143.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".", "src"
]
testpaths = [
    "tests"
]
